# BullBearMetrics

./: .gitignore  readme.md
backend/: main.py  main1.py  main3.py  testing.py
backend/analysis/: stock_analysis.py
backend/ploting/: candle_stick.py
ui/: package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
ui/components/: BudgetTable.module.css  BudgetTable.tsx
vk/: README.md  pyproject.toml  report.md
vk/src/vk/: crew.py  main.py
vk/src/vk/config/: tasks.yaml
