[project]
name = "vk"
version = "0.1.0"
description = "vk using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
vk = "vk.main:run"
run_crew = "vk.main:run"
train = "vk.main:train"
replay = "vk.main:replay"
test = "vk.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
